@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> 'Sprog',
 	'setting-theme'				=> 'Tema',
 	'setting-uses-moderation'		=> 'Kommentarer indsendt af normale brugere kræver moderering',
-	'setting-pends-user-edits'		=> 'Kommentarer redigeret af normale brugere kræver yderligere moderering',
+	'setting-pends-user-edits'		=> 'Kommentarer redigeret af normale brugere kræver moderering',
 	'setting-data-format'			=> 'Kommentar dataformat',
 	'setting-default-name'			=> 'Standardkommentatornavn',
 	'setting-allows-images'			=> 'Tillad visning af billeder i kommentarer',
