@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> 'Sprache',
 	'setting-theme'				=> 'Thema',
 	'setting-uses-moderation'		=> 'Kommentare von normalen Benutzern erfordern Moderation',
-	'setting-pends-user-edits'		=> 'Von normalen Benutzern bearbeitete Kommentare erfordern zusätzliche Moderation',
+	'setting-pends-user-edits'		=> 'Bearbeitete Kommentare von normalen Benutzern erfordern eine Moderation',
 	'setting-data-format'			=> 'Kommentar Datenformat',
 	'setting-default-name'			=> 'Name des Standardbenenners',
 	'setting-allows-images'			=> 'Anzeige von Bildern in Kommentaren erlauben',
