@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> 'Γλώσσα',
 	'setting-theme'				=> 'Θέμα',
 	'setting-uses-moderation'		=> 'Τα σχόλια από απλούς χρήστες απαιτούν έγκριση',
-	'setting-pends-user-edits'		=> 'Τα επεξεργασμένα σχόλια από απλούς χρήστες απαιτούν πρόσθετη διαχείριση',
+	'setting-pends-user-edits'		=> 'Τα επεξεργασμένα σχόλια από απλούς χρήστες απαιτούν έγκριση',
 	'setting-data-format'			=> 'Τύπος δεδομένων σχολίων',
 	'setting-default-name'			=> 'Προεπιλεγμένο όνομα σχολιαστή',
 	'setting-allows-images'			=> 'Να επιτρέπεται η προβολή εικόνων στα σχόλια',
