@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> 'Language',
 	'setting-theme'				=> 'Theme',
 	'setting-uses-moderation'		=> 'Comments posted by normal users require moderation',
-	'setting-pends-user-edits'		=> 'Comments edited by normal users require additional moderation',
+	'setting-pends-user-edits'		=> 'Comments edited by normal users require moderation',
 	'setting-data-format'			=> 'Comment data format',
 	'setting-default-name'			=> 'Default commenter name',
 	'setting-allows-images'			=> 'Allow display of images in comments',
