@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> 'Idioma',
 	'setting-theme'				=> 'Tema',
 	'setting-uses-moderation'		=> 'Los comentarios publicados por usuarios normales requieren moderación',
-	'setting-pends-user-edits'		=> 'Los comentarios editados por usuarios normales requieren moderación adicional',
+	'setting-pends-user-edits'		=> 'Los comentarios editados por usuarios normales requieren moderación',
 	'setting-data-format'			=> 'Formato de datos de comentarios',
 	'setting-default-name'			=> 'Nombre de comentarista predeterminado',
 	'setting-allows-images'			=> 'Permitir visualización de imágenes en comentarios',
