@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> 'زبان',
 	'setting-theme'				=> 'تم',
 	'setting-uses-moderation'		=> 'نظرات ارسال شده توسط کاربران عادی نیاز به نظارت دارند',
-	'setting-pends-user-edits'		=> 'نظرات ویرایش شده توسط کاربران عادی نیاز به نظارت بیشتری دارند',
+	'setting-pends-user-edits'		=> 'نظرات ویرایش شده توسط کاربران عادی نیاز به نظارت دارند',
 	'setting-data-format'			=> 'فرمت داده اظهار نظر',
 	'setting-default-name'			=> 'نام پیش فرض نظر دهنده',
 	'setting-allows-images'			=> 'اجازه نمایش تصاویر در نظرات',
