@@ -163,7 +163,7 @@ $locale = array (
 	'setting-language'			=> 'Langue',
 	'setting-theme'				=> 'Thème',
 	'setting-uses-moderation'		=> 'Les commentaires postés par les utilisateurs normaux nécessitent une modération',
-	'setting-pends-user-edits'		=> 'Les commentaires édités par des utilisateurs normaux nécessitent une modération supplémentaire',
+	'setting-pends-user-edits'		=> 'Les commentaires édités par des utilisateurs normaux nécessitent une modération',
 	'setting-data-format'			=> 'Format des données de commentaire',
 	'setting-default-name'			=> 'Nom du commentateur par défaut',
 	'setting-allows-images'			=> 'Autoriser l\'affichage des images dans les commentaires',
