@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> '言語',
 	'setting-theme'				=> 'テーマ',
 	'setting-uses-moderation'		=> '普通のユーザーが投稿したコメントは管理が必要です',
-	'setting-pends-user-edits'		=> '通常のユーザーが編集したコメントには追加の管理が必要です',
+	'setting-pends-user-edits'		=> '通常のユーザーが編集したコメントは管理が必要です',
 	'setting-data-format'			=> 'コメントデータフォーマット',
 	'setting-default-name'			=> 'デフォルトのコメント作成者の名前',
 	'setting-allows-images'			=> 'コメントの画像表示を許可する',
