@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> 'Taal',
 	'setting-theme'				=> 'Thema',
 	'setting-uses-moderation'		=> 'Opmerkingen geplaatst door normale gebruikers vereisen moderatie',
-	'setting-pends-user-edits'		=> 'Opmerkingen bewerkt door normale gebruikers vereisen extra moderatie',
+	'setting-pends-user-edits'		=> 'Opmerkingen bewerkt door normale gebruikers vereisen moderatie',
 	'setting-data-format'			=> 'Gegevensindeling van de gegevens',
 	'setting-default-name'			=> 'Default commenter name',
 	'setting-allows-images'			=> 'Sta weergave van afbeeldingen toe in reacties',
