@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> 'Język',
 	'setting-theme'				=> 'Temat',
 	'setting-uses-moderation'		=> 'Komentarze publikowane przez zwykłych użytkowników wymagają moderacji',
-	'setting-pends-user-edits'		=> 'Komentarze edytowane przez zwykłych użytkowników wymagają dodatkowego moderowania',
+	'setting-pends-user-edits'		=> 'Komentarze edytowane przez zwykłych użytkowników wymagają moderacji',
 	'setting-data-format'			=> 'Format danych komentarzy',
 	'setting-default-name'			=> 'Domyślna nazwa komentera',
 	'setting-allows-images'			=> 'Pozwól wyświetlać obrazy w komentarzach',
