@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> 'Limba',
 	'setting-theme'				=> 'Tema',
 	'setting-uses-moderation'		=> 'Comentarii postate de utilizatori normali necesită moderare',
-	'setting-pends-user-edits'		=> 'Comentariile editate de utilizatorii normali necesită moderare suplimentară',
+	'setting-pends-user-edits'		=> 'Comentariile editate de utilizatorii normali necesită moderare',
 	'setting-data-format'			=> 'Format de date pentru comentarii',
 	'setting-default-name'			=> 'Numele implicit de comentator',
 	'setting-allows-images'			=> 'Permite afișarea imaginilor în comentarii',
