@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> 'Dil',
 	'setting-theme'				=> 'Tema',
 	'setting-uses-moderation'		=> 'Normal kullanıcılar tarafından gönderilen yorumlar ılımlılık gerektirir',
-	'setting-pends-user-edits'		=> 'Normal kullanıcılar tarafından düzenlenen yorumlar ek denetleme gerektirir',
+	'setting-pends-user-edits'		=> 'Normal kullanıcılar tarafından düzenlendi yorumlar ılımlılık gerektirir',
 	'setting-data-format'			=> 'Yorum veri formatı',
 	'setting-default-name'			=> 'Varsayılan yorum yazan adı',
 	'setting-allows-images'			=> 'Görüntülerde görüntülerin görüntülenmesine izin ver',
