@@ -156,7 +156,7 @@ $locale = array (
 	'setting-language'			=> '语言',
 	'setting-theme'				=> '主题',
 	'setting-uses-moderation'		=> '普通用户发布的评论需要审核',
-	'setting-pends-user-edits'		=> '普通用户编辑的评论需要额外的审核',
+	'setting-pends-user-edits'		=> '普通用户编辑的评论需要审核',
 	'setting-data-format'			=> '评论数据格式',
 	'setting-default-name'			=> '默认评论者名称',
 	'setting-allows-images'			=> '允许在评论中显示图片',
